# AltTaber

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  VersionInfo.rc.in  res.qrc
.github/workflows/: build.yml
docs/: README.en.md
header/: ActionRouter.h  ActivationHistory.h  AddBlockedDialog.h  BlockedWindowManager.h  GroupWindowCycler.h  HotkeyConflictResolver.h  HotkeyPageManager.h  OverlayController.h  OverlayView.h  SelectionController.h  SettingsDialog.h  SettingsStyleHelper.h  TaskbarMouseHelper.h  TaskbarWindowCycler.h  UpdateDialog.h  WindowCycleOrder.h  WindowDescriptorBuilder.h  WindowEnumerator.h  WindowFilter.h  WindowGroupModel.h  WindowGrouper.h  WindowManager.h  WindowTypes.h  widget.h
header/core/: ConfigManager.h  ConfigManagerBase.h  HotkeyAction.h  HotkeyActionTypes.h  HotkeyBinding.h  HotkeyStrings.h  IConfigStore.h  JsonTranslator.h  LanguageManager.h  QuitReason.h  ThemeManager.h  UpdateMarker.h
header/hook/: HotkeyRecorder.h  KeyboardHooker.h  TaskbarWheelHooker.h  WheelEventProcessor.h  uiautomation.h
header/lifecycle/: Application.h  HotkeyService.h  IconOnlyDelegate.h  IconUtil.h  Logger.h  SingleApp.h  Startup.h  SystemTray.h  UpdateService.h
header/utils/: AppUtil.h  ConfigManager.h  ConfigManagerBase.h  HotkeyAction.h  HotkeyRecorder.h  KeyboardHooker.h  LanguageManager.h  Logger.h  MiscUtil.h  PathUtils.h  PinyinTable.inc  ProcessUtil.h  PwaDetector.h  StartMenuHelper.h  SystemTray.h  TaskbarWheelHooker.h  ThemeManager.h  Util.h  UwpHelper.h  WindowUtil.h  uiautomation.h
installer/: build-installer.ps1  setup.iss  setup.iss.in
src/: ActionRouter.cpp  ActivationHistory.cpp  AddBlockedDialog.cpp  BlockedWindowManager.cpp  GroupWindowCycler.cpp  HotkeyConflictResolver.cpp  HotkeyPageManager.cpp  OverlayController.cpp  SelectionController.cpp  SettingsDialog.cpp  SettingsStyleHelper.cpp  TaskbarMouseHelper.cpp  TaskbarWindowCycler.cpp  UpdateDialog.cpp  WindowCycleOrder.cpp  WindowDescriptorBuilder.cpp  WindowEnumerator.cpp  WindowFilter.cpp  WindowGroupModel.cpp  WindowGrouper.cpp  WindowManager.cpp  main.cpp  widget.cpp
src/core/: ConfigManagerBase.cpp  HotkeyAction.cpp  JsonTranslator.cpp  LanguageManager.cpp  ThemeManager.cpp
src/hook/: HotkeyRecorder.cpp  KeyboardHooker.cpp  TaskbarWheelHooker.cpp  WheelEventProcessor.cpp  uiautomation.cpp  winEventHook.cpp
src/lifecycle/: Application.cpp  HotkeyService.cpp  IconOnlyDelegate.cpp  IconUtil.cpp  Logger.cpp  QtWin.cpp  ScheduledTask.cpp  SystemTray.cpp  UpdateService.cpp
src/utils/: AppExeResolver.cpp  ConfigManagerBase.cpp  HotkeyAction.cpp  HotkeyRecorder.cpp  IconOnlyDelegate.cpp  IconUtil.cpp  KeyboardHooker.cpp  LanguageManager.cpp  Logger.cpp  MiscUtil.cpp  PathUtils.cpp  ProcessUtil.cpp  PwaDetector.cpp  ScheduledTask.cpp  StartMenuHelper.cpp  TaskbarWheelHooker.cpp  Util.cpp  UwpHelper.cpp  WindowUtil.cpp  uiautomation.cpp  winEventHook.cpp
tests/: CMakeLists.txt  main.cpp  test_config.cpp  test_filter.cpp  test_filter_main.cpp  test_hotkey.cpp  test_hotkey_main.cpp  test_overlay_main.cpp  test_overlay_stubs.cpp
translations/: zh_CN.json  zh_CN.ts
ui/: SettingsDialog.ui  UpdateDialog.ui  widget.ui
